--- a/setup-ose-node.yml
+++ b/setup-ose-node.yml
@@ -27,31 +27,31 @@
       #- name: 'Set hostname'
       #  command: 'hostnamectl set-hostname {{ hostname }}'
 
-      #- name: 'Login to RHN and assign RHN pool'
-      #  redhat_subscription: 
-      #     state: present 
-      #     username: "{{ rhn_username }}" 
-      #     password: "{{ rhn_password }}"
-      #     pool_ids: "{{ pool  }}"
+      - name: 'Login to RHN and assign RHN pool'
+        redhat_subscription: 
+           state: present 
+           username: "{{ rhn_username }}" 
+           password: "{{ rhn_password }}"
+           pool_ids: "{{ pool  }}"
 
-      #- name: 'Disable local repos'
-      #  command: "yum-config-manager --disable *" 
+      - name: 'Disable local repos'
+        command: "yum-config-manager --disable *" 
 
-      #- name: 'Enable required RHN repos'
-      #  command: "subscription-manager repos --disable=* --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-ose-3.6-rpms"
+      - name: 'Enable required RHN repos'
+        command: "subscription-manager repos --disable=* --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-ose-3.6-rpms"
 
-      #- name: 'Enable CNS repo'
-      #  command: "subscription-manager repos --enable=rh-gluster-3-for-rhel-7-server-rpms"
+      - name: 'Enable CNS repo'
+        command: "subscription-manager repos --enable=rh-gluster-3-for-rhel-7-server-rpms"
 
-      #- name: 'Yum install required packages'
-      #  yum:
-      #     name: 'net-tools bind-utils iptables-services bridge-utils bash-completion kexec-tools sos psacct'
-      #     state: latest
+      - name: 'Yum install required packages'
+        yum:
+           name: 'net-tools bind-utils iptables-services bridge-utils bash-completion kexec-tools sos psacct'
+           state: latest
 
-      #- name: 'Yum update all'
-      #  yum:
-      #      name: '*' 
-      #      state: latest
+      - name: 'Yum update all'
+        yum:
+            name: '*' 
+            state: latest
 
       - name: 'Yum install atomic openshift utils'
         yum: 
@@ -63,19 +63,28 @@
            name: glusterfs-fuse
            state: latest
    
-      #- name: 'Yum install docker'
-      #  yum: 
+      - name: 'Yum install docker'
+        yum: 
+          name: docker 
+          state: latest
+
+      - name: 'Edit docker config file'
+        lineinfile:
+          dest: /etc/sysconfig/docker
+          regexp: "^OPTIONS='--selinux-enabled'"
+          line: "OPTIONS='--selinux-enabled --insecure-registry 172.30.0.0/16'"
+     
+      #TODO setup docker-storage-setup
+    
+      #- name: 'Enable docker service'
+      #  service:
       #    name: docker 
-      #    state: latest
+      #    state: enable
 
-      #- name: 'Edit docker config file'
-      #  lineinfile:
-      #    dest: /etc/sysconfig/docker
-      #    regexp: "^OPTIONS='--selinux-enabled'"
-      #    line: "OPTIONS='--selinux-enabled --insecure-registry 172.30.0.0/16'"
-
-      #- name: 'Restart docker service'
+      #- name: 'Start docker service'
       #  service: 
       #    name: docker 
-      #    state: restarted
+      #    state: started
 
+      #- name: 'Get Docker info'
+         command: docker info
