--- a/setup-ose-node.yml
+++ b/setup-ose-node.yml
@@ -46,7 +46,7 @@
         tags: register 
 
       - name: 'Enable required RHN repos'
-        command: "subscription-manager repos --disable=* --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-ose-3.6-rpms"
+        command: "subscription-manager repos --disable=* --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-ose-3.6-rpms --enable=rhel-7-fast-datapath-rpms"
         tags: register 
 
       - name: 'Enable CNS repo'
