--- a/ocp_inventory_template.yml
+++ b/ocp_inventory_template.yml
@@ -22,12 +22,12 @@
       OCP_MASTER_HOSTNAME: master.ocpcloud.local
       OCP_MASTER_PUBLIC_HOSTNAME: 'master.ocpcloud.com'
    
-      HTTP_PROXY: no
+      HTTP_PROXY: "no"
       OCP_HTTP_PROXY:
       OCP_HTTPS_PROXY: 
       OCP_NO_PROXY:
 
-      AWS: no
+      AWS: "no"
   
     tasks:
       - name: Proces inventory template file
