--- a/setup-ose-node.yml
+++ b/setup-ose-node.yml
@@ -91,10 +91,11 @@
         tags: docker
  
       - name: 'Edit docker config file'
-        lineinfile:
-           dest: /etc/sysconfig/docker
-           regexp: "^OPTIONS='--selinux-enabled --log-driver=journald --signature-verification=false'"
-           line: "OPTIONS='--selinux-enabled --log-driver=journald --signature-verification=false --insecure-registry 172.30.0.0/16'"
+        replace:
+           path: /etc/sysconfig/docker
+           regexp: "^OPTIONS='--selinux-enabled"
+           replace: "OPTIONS='--selinux-enabled --insecure-registry 172.30.0.0/16"
+           backup: yes
         tags: docker
      
       - name: Create Docker storage configuration
