--- a/ocp_inventory_template_aws.yml
+++ b/ocp_inventory_template_aws.yml
@@ -13,6 +13,8 @@
         - { host: 'ip-172-31-26-194.us-west-2.compute.internal', region: 'dev' }
         - { host: 'ip-172-31-31-130.us-west-2.compute.internal', region: 'dev' }
         - { host: 'ip-172-31-24-228.us-west-2.compute.internal', region: 'test' }
+      LB: "no"
+      OCP_LB_NODES:
       
       OCP_SSH_USER: ec2-user
       OCP_SSH_BECOME: true
