--- a/ocp_inventory_template_aws.yml
+++ b/ocp_inventory_template_aws.yml
@@ -37,6 +37,8 @@
       AWS_KEY: "{{ lookup('env','AWS_KEY') }}"
       AWS_SECRET: "{{ lookup('env','AWS_SECRET') }}"
       AWS_PUBLIC_IP: "{{ lookup('env','AWS_PUBLIC_IP') }}" 
+
+      OSP: "no"
     
     tasks:
       - name: Process inventory template file
