--- a/ocp_inventory_template_osp.yml
+++ b/ocp_inventory_template_osp.yml
@@ -34,22 +34,20 @@
       OCP_NO_PROXY:
 
       AWS: "no"
-      AWS_KEY:
-      AWS_SECRET:
-      AWS_PUBLIC_IP:
-
-      OSP: "no"
-      OSP_AUTH_URL:
-      OSP_USERNAME:
-      OSP_PASSWORD:
-      OSP_TENANT_ID:
-      OSP_TENANT_NAME:
-      OSP_REGION:
-      OSP_DOMAIN_ID:
-      OSP_DOMAIN_NAME:  
+      
+      OSP: "yes"
+      OSP_AUTH_URL: "{{ lookup('env','OSP_AUTH_URL') }}"
+      OSP_USERNAME: "{{ lookup('env','OSP_USERNAME') }}"
+      OSP_PASSWORD: "{{ lookup('env','OSP_PASSWORD') }}"
+      OSP_TENANT_ID: "{{ lookup('env','OSP_TENANT_ID') }}"
+      OSP_TENANT_NAME: "{{ lookup('env','OSP_TENANT_NAME') }}"
+      OSP_REGION: "{{ lookup('env','OSP_REGION') }}"
+      OSP_DOMAIN_ID: "{{ lookup('env','OSP_DOMAIN_ID') }}"
+      OSP_DOMAIN_NAME: "{{ lookup('env','OSP_DOMAIN_NAME') }}" 
   
     tasks:
       - name: Proces inventory template file
         template:
           src: "{{ template }}"
           dest: ./inventory
+
