--- a/ocp_project_delete_with_oc.yml
+++ b/ocp_project_delete_with_oc.yml
@@ -1,6 +1,6 @@
 ---
   - name: Delete Openshift Container Platform project
-    hosts: masters
+    hosts: ocp_client
     remote_user: root
     gather_facts: no
  
