--- a/ocp_project_create_with_oc.yml
+++ b/ocp_project_create_with_oc.yml
@@ -6,6 +6,8 @@
  
     vars:
       ocp_token: ABCD
+      ocp_host: localhost
+      ocp_port: 8443
 
       project_name: ansibletestproject
       project_displayName: Ansible Test Project
@@ -22,7 +24,7 @@
       
     tasks:
       - name: Login with token
-        command: 'oc login --token={{ocp_token}}'
+        command: 'oc login --token={{ocp_token}}' https://{{ocp_host}}:{{ocp_port}}
         register: result
 
       - debug:
