--- a/ocp_project_delete.yml
+++ b/ocp_project_delete.yml
@@ -1,6 +1,6 @@
 ---
   - name: Delete Openshift Container Platform project
-    hosts: ocp_clients
+    hosts: masters
     remote_user: root
  
     vars:
