--- a/ocp_inventory_template_osp.yml
+++ b/ocp_inventory_template_osp.yml
@@ -13,8 +13,10 @@
         - { host: 'appnode1.ocpcloud.local', region: 'dev' }
         - { host: 'appnode2.ocpcloud.local', region: 'dev' }
         - { host: 'appnode3.ocpcloud.local', region: 'test' }
+      OCP_BASTION_NODE: bastion.ocpcloud.local
       LB: "no"
       OCP_LB_NODES:
+      
       
       OCP_SSH_USER: ec2-user
       OCP_SSH_BECOME: true
