--- a/ocp_inventory_template.yml
+++ b/ocp_inventory_template.yml
@@ -13,6 +13,7 @@
         - { host: 'appnode1.ocpcloud.local', region: 'dev' }
         - { host: 'appnode2.ocpcloud.local', region: 'dev' }
         - { host: 'appnode3.ocpcloud.local', region: 'test' }
+      OCP_BASTION_NODE: bastion.ocpcloud.local
       LB: "no"
       OCP_LB_NODES:
       
