--- a/ocp_inventory_template_aws.yml
+++ b/ocp_inventory_template_aws.yml
@@ -1,7 +1,7 @@
 ---
   - name: Generate Openshift Container Platform installer inventory file
 
-    hosts: localhost
+    hosts: bastion
     gather_facts: no
 
     vars:
