--- a/ocp_project_create_with_oc_cfme.yml
+++ b/ocp_project_create_with_oc_cfme.yml
@@ -12,7 +12,7 @@
 
       project_name: ansibletestproject
       project_displayName: Ansible Test Project
-      project_description: This project was created using Ansible 
+      project_description: This project was created using CloudForms and Ansible 
       project_admin: admin
       project_type: default
       project_tenant: default
