--- a/ocp_inventory_template.yml
+++ b/ocp_inventory_template.yml
@@ -15,6 +15,7 @@
         - { host: 'appnode3.ocpcloud.local', region: 'test' }
       LB: "no"
       OCP_LB_NODES:
+      CNS: "yes"
       
       OCP_SSH_USER: ec2-user
       OCP_SSH_BECOME: true
